fix(grid): decrease column menu icon z-index
https://github.com/telerik/kendo-themes/issues/2576

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -1056,7 +1056,7 @@
         }
 
         .k-grid-header .k-grid-column-menu {
-            z-index: 5;
+            z-index: 1;
         }
     }
 
